@@ -9,6 +9,13 @@ Comments= <<EOT
 - Implement overload_type = 3 instead of hard-coding the name Object::Array.
 - Include links to MetaCPAN in the output report.
 - Fix version # in Benchmark::Featureset::SetOps::Config.
+- Add a recommendation, as a note to Set::Object, and various other notes.
+- Change design of HTML template slightly.
+- Include statistics from Set::Tiny's benchmark.pl.
+- Update various notes per module.
+- Identify the report generator (this module) in the report body.
+- Ship scripts/symmetric.demo.pl.
+- Ship data/benchmark.log.
 EOT
 
 [V 1.00]
