@@ -1,5 +1,6 @@
 [Array::AsObject]
 include = Yes
+notes = Depends indirectly on Date::Manip
 
 [Array::Compare]
 include = No
@@ -23,16 +24,18 @@ notes = EO::Array is an OO wrapper around Perl's array type
 
 [Object::Array]
 include = Yes
+notes = Doesn't really offer set operations
 overload_type = 1
 sub_classes = Object::Array::Plugin::Builtins, Object::Array::Plugin::ListMoreUtils
 
 [Set::Array]
 include = Yes
+notes = Some methods, e.g. difference(), update the invocant unexpectedly
 overload_type = 1
 
 [Set::Bag]
 include = Yes
-notes = Supports multisets [*]
+notes = Supports multisets, so new() takes a hash, and elements are (name, value) pairs
 overload_type = 1
 
 [Set::DynamicGroups]
@@ -49,6 +52,7 @@ notes = Set::Hash allows you to create strings as objects and use OO-style metho
 
 [Set::Light]
 include = Yes
+notes = Claims to be very small and fast compared to Set::Object and Set::Scalar
 overload_type = 2
 
 [Set::NestedGroups]
@@ -57,6 +61,7 @@ notes = Set::NestedGroups is like Set::Groups
 
 [Set::Object]
 include = Yes
+notes = Requires a C compiler
 overload_type = 1
 
 [Set::Relation]
@@ -65,17 +70,21 @@ notes = Set::Relation is an emulator for RDBMS-style relational data
 
 [Set::Scalar]
 include = Yes
+notes = Long term unfixed bug in Set::Scalar::ValuedUniverse
 overload_type = 1
 sub_classes = Set::Scalar::Base, Set::Scalar::Null, Set::Scalar::Real, Set::Scalar::Virtual
 
 [Set::SortedArray]
 include = Yes
+notes = Modification of the set (i.e. after creation) is not supported
 overload_type = 1
 
 [Set::Tiny]
 include = Yes
+notes = Recommended, taking in to account features (+), unfixed bugs (-),<br />minimal dependencies (+) and, lastly, speed (+). Stats below
 overload_type = 2
 
 [Set::Toolkit]
 include = Yes
+notes = Bug report of random test failures
 overload_type = 1
